# Playro

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_CONTEXT.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  cli.py  hermes_state.py  package-lock.json  package.json  pyproject.toml  run_agent.py  toolsets.py  utils.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
agent/: anthropic_adapter.py  auxiliary_client.py  context_compressor.py  context_references.py  copilot_acp_client.py  curator.py  file_safety.py  image_gen_provider.py  image_routing.py  prompt_builder.py  shell_hooks.py  skill_commands.py  skill_utils.py
cron/: jobs.py  scheduler.py
gateway/: config.py  run.py  session.py  session_context.py  status.py
hermes_cli/: _parser.py  auth.py  banner.py  browser_connect.py  clipboard.py  commands.py  completion.py  config.py  gateway.py  gateway_windows.py  hooks.py  kanban.py  main.py  oneshot.py  plugins.py  profile_distribution.py  setup.py  skills_hub.py  stdio.py  tools_config.py  web_server.py
providers/: README.md  __init__.py
scripts/: audit_playro_retention.py  verify-playro-desktop-server.sh
tests/: conftest.py  test_codex_security_fixes.py  test_codex_security_regressions.py
tools/: approval.py  browser_camofox.py  browser_cdp_tool.py  browser_tool.py  code_execution_tool.py  computer_use_tool.py  credential_files.py  cronjob_tools.py  delegate_tool.py  discord_tool.py  docker_env_store.py  env_passthrough.py  feishu_doc_tool.py  feishu_drive_tool.py  feishu_tool_auth.py  file_operations.py  (+19 more)
(+184 files in other folders)
